non stable managers layer